src/objects/MUSW__Mapping_Layer__c.object
<CustomObject>
    <description>Internal - GIS layer configuration per Mapping Service</description>
    <fields>
        <fullName>MUSW__Mapping_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapping Service</label>
        <referenceTo>MUSW__Mapping_Service__c</referenceTo>
        <relationshipName>Mapping_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Related_Attribute__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Attribute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Related_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Field(s)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Related_Table__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Table</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Mapping Layer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>